--- a/Classroom/package.json
+++ b/Classroom/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0"
